05-dockerfiles-s2i/go-webserver/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: user-00/webserver:v1
