05-dockerfiles-s2i/go-webserver/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-custom
spec:
  selector:
    app: webserver
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
